RESOLVED FIXED172217
Regression (198943): <marquee> shouldn't wrap text
https://bugs.webkit.org/show_bug.cgi?id=172217
Summary Regression (198943): <marquee> shouldn't wrap text
Antti Koivisto
Reported 2017-05-17 06:01:13 PDT
<marquee><span>text</span></marquee> should render the text in single line.
Attachments
patch (5.91 KB, patch)
2017-05-17 06:15 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2017-05-17 06:15:58 PDT
Antti Koivisto
Comment 2 2017-05-17 07:21:09 PDT
Andreas Kling
Comment 3 2017-05-17 07:25:39 PDT
Comment on attachment 310385 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=310385&action=review Wow, I was not expecting to see a marquee patch in 2017. r=me > Source/WebCore/rendering/RenderMarquee.cpp:200 > - auto& style = m_layer->renderer().mutableStyle(); > + auto& style = m_layer->renderer().style(); Nice.
WebKit Commit Bot
Comment 4 2017-05-17 08:12:52 PDT
Comment on attachment 310385 [details] patch Clearing flags on attachment: 310385 Committed r216973: <http://trac.webkit.org/changeset/216973>
WebKit Commit Bot
Comment 5 2017-05-17 08:12:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.