Regression (198943): <marquee> shouldn't wrap text https://bugs.webkit.org/show_bug.cgi?id=172217

Reviewed by Andreas Kling.

Source/WebCore:

RenderMarquee::updateMarqueeStyle mutated the style and then expected it to inherit to children.
This doesn't work anymore because render tree construction is now separated from style resolution
where inheritance happens.

Test: fast/html/marquee-child-wrap.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::adjustRenderStyle):

    Implement marquee hacks in adjustRenderStyle instead. This can't do the childrenInline check
    the previous code had but it wasn't working anyway (there are no children when updateMarqueeStyle
    gets called).

* rendering/RenderMarquee.cpp:
(WebCore::RenderMarquee::updateMarqueeStyle):

    This no longer needs mutable style.

LayoutTests:

* fast/html/marquee-child-wrap-expected.html: Added.
* fast/html/marquee-child-wrap.html: Added.


Canonical link: https://commits.webkit.org/189138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216973 268f45cc-cd09-0410-ab3c-d52691b4dbfc